--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                     Perem = 'True';
                 } else if (dataTypeString.includes('UINT') || dataTypeString.includes('REAL') || dataTypeString.includes('TIME')) {
                     dataType = 'Bit';
-                    subDataType = 'M';
-                    Perem = 'False';
+                    subDataType = 'MW';
+                    Perem = 'True';
                 } else {
                     return null; // Возвращаем null, если тип данных не определен
                 }
