--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 } else if (dataTypeString.includes('UINT') || dataTypeString.includes('REAL') || dataTypeString.includes('TIME')) {
                     dataType = 'Bit';
                     subDataType = 'MW';
-                    Perem = 'True';
+                    Perem = 'False';
                 } else {
                     return null; // Возвращаем null, если тип данных не определен
                 }
