--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     subDataType = 'MW';
                     Perem = 'True';
                 } else if (dataTypeString.includes('UINT') || dataTypeString.includes('REAL') || dataTypeString.includes('TIME')) {
-                    dataType = 'Bit';
+                    dataType = 'Word';
                     subDataType = 'MW';
                     Perem = 'False';
                 } else {
